[tool.poetry]
name = "pykfas-dev"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyterlab = "^3.1.12"
notebook = "^6.4.4"
isort = "^5.9.3"
black = "^21.9b0"
flake8 = "^3.9.2"
numpy = "^1.21.2"
fortran-magic = "^0.7"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
